@@ -10,7 +10,8 @@ java -version
 echo "---------------------------------------------------------------------"
 
 DIR="$(cd "$(dirname "$0")" && pwd)"
-java -jar "$DIR/promptfx-@version@.jar"
+JVM_OPTS="--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED --add-opens javafx.graphics/javafx.scene=ALL-UNNAMED"
+java $JVM_OPTS -jar "$DIR/promptfx-@version@.jar"
 
 echo "---------------------------------------------------------------------"
 echo "PromptFx UI has exited."
